dosfstools - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/dosfstools.yaml
+++ b/dosfstools.yaml
@@ -34,7 +34,8 @@ pipeline:
   - uses: autoconf/configure
     with:
       opts: |
-        --enable-compat-symlinks
+        --enable-compat-symlinks \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
