dropbear - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/dropbear.yaml
+++ b/dropbear.yaml
@@ -27,7 +27,8 @@ pipeline:
         --disable-utmp \
         --disable-wtmp \
         --disable-pututline \
-        --disable-lastlog
+        --disable-lastlog \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
     with:
