ethtool - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/ethtool.yaml
+++ b/ethtool.yaml
@@ -29,7 +29,8 @@ pipeline:
         --build=$CBUILD \
         --host=$CHOST \
         --prefix=/usr \
-        --mandir=/usr/share/man
+        --mandir=/usr/share/man \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
