--- a/mattermost-10.5.yaml
+++ b/mattermost-10.5.yaml
@@ -48,6 +48,8 @@ pipeline:
 
   - uses: go/bump
     with:
+      deps: |-
+        github.com/anchore/archiver/v3@v3.5.2
       replaces: github.com/mholt/archiver/v3=github.com/anchore/archiver/v3@v3.5.2
       modroot: ./server
       tidy: false # https://github.com/mattermost/mattermost/issues/26221
