eudev - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/eudev.yaml
+++ b/eudev.yaml
@@ -37,7 +37,8 @@ pipeline:
         --sysconfdir=/etc \
         --enable-split-usr \
         --enable-manpages \
-        --enable-kmod
+        --enable-kmod \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
