--- a/wolfi-baselayout.yaml
+++ b/wolfi-baselayout.yaml
@@ -1,12 +1,13 @@
 package:
   name: wolfi-baselayout
   version: 20230201
-  epoch: 16
+  epoch: 17
   description: "baselayout data for Wolfi"
   copyright:
     - license: MIT
   dependencies:
     runtime:
+      - 0000aaaa-usrmerge
       - ca-certificates-bundle
 
 environment:
@@ -38,11 +39,11 @@ pipeline:
 
   - name: Install
     runs: |
-      for i in bin dev etc etc/profile.d etc/secfixes.d home lib proc root var/log usr/bin usr/sbin usr/local/lib sys tmp var/spool/cron opt run usr/lib; do
+      for i in dev etc etc/profile.d etc/secfixes.d home proc root var/log usr/local/lib sys tmp var/spool/cron opt run; do
         mkdir -p "${{targets.destdir}}"/${i}
       done
 
-      for i in lib64 usr/lib64 usr/local/lib64; do
+      for i in usr/local/lib64; do
         ln -s lib "${{targets.destdir}}"/${i}
       done
 
