--- a/fping.yaml
+++ b/fping.yaml
@@ -33,7 +33,8 @@ pipeline:
         --host=$CHOST \
         --prefix=/usr \
         --mandir=/usr/share/man \
-        --enable-ipv6
+        --enable-ipv6 \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
@@ -42,7 +43,7 @@ pipeline:
   - uses: strip
 
   # This MUST run after strip, which strips capabilities too!
-  - runs: setcap cap_net_raw=+ep "${{targets.destdir}}"/usr/sbin/fping
+  - runs: setcap cap_net_raw=+ep "${{targets.destdir}}"/usr/bin/fping
 
 subpackages:
   - name: "fping-doc"
@@ -72,4 +73,4 @@ test:
         fping --help
     - name: Test file capabilities
       runs: |
-        getcap /usr/sbin/fping | cut -d ' ' -f2 | grep -q -E '^cap_net_raw=+ep$'
+        getcap /usr/bin/fping | cut -d ' ' -f2 | grep -q -E '^cap_net_raw=+ep$'
