--- a/linux-pam.yaml
+++ b/linux-pam.yaml
@@ -1,7 +1,7 @@
 package:
   name: linux-pam
   version: 1.7.0
-  epoch: 2
+  epoch: 3
   description: Linux PAM (Pluggable Authentication Modules for Linux)
   copyright:
     - license: BSD-3-Clause
@@ -17,6 +17,7 @@ environment:
       - ca-certificates-bundle
       - flex-dev
       - gettext-dev
+      - libselinux-dev
       - libtool
       - meson
 
