exim - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/exim.yaml
+++ b/exim.yaml
@@ -62,7 +62,10 @@ pipeline:
       install -m750 -D -g mail -d "${{targets.destdir}}"/etc/mail
       make DESTDIR="${{targets.destdir}}" INSTALL_ARG="-no_symlink -no_chown exim" install
       install -D -m644 doc/exim.8 "${{targets.destdir}}"/usr/share/man/man8/exim.8
-      cd "${{targets.destdir}}"/usr/sbin
+      mkdir -p ${{targets.destdir}}/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
+      cd "${{targets.destdir}}"/usr/bin
       mv exim-* exim
       chmod u+s exim
       for i in mailq rmail rsmtp runq sendmail newaliases; do
@@ -181,7 +184,7 @@ test:
         else
           echo "Exim is installed."
         fi
-        /usr/sbin/exim -bP
+        /usr/bin/exim -bP
 
 update:
   enabled: true
