fuse3 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/fuse3.yaml
+++ b/fuse3.yaml
@@ -26,6 +26,9 @@ pipeline:
       expected-commit: 7a92727d97c10290b3501d86a194738973edb61d
 
   - uses: meson/configure
+    with:
+      opts: |
+        --sbindir /usr/bin
 
   - uses: meson/compile
 
