postfix - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/postfix.yaml
+++ b/postfix.yaml
@@ -108,7 +108,6 @@ pipeline:
       # Add LMDB settings and make it default
       ccargs="$ccargs -DHAS_LMDB $(pkg-config --cflags lmdb) -DDEF_DB_TYPE=\\\"lmdb\\\""
 
-      mkdir -p "${{targets.contextdir}}"/usr/sbin
       mkdir -p "${{targets.contextdir}}"/usr/bin
       mkdir -p "${{targets.contextdir}}"/etc/postfix
       mkdir -p "${{targets.contextdir}}"/var/spool/postfix/public
@@ -154,8 +153,8 @@ pipeline:
       install -Dm755 auxiliary/qshape/qshape.pl -t "${{targets.contextdir}}"/usr/bin
 
       for i in postdrop postqueue; do
-         chgrp postdrop "${{targets.contextdir}}"/usr/sbin/$i
-         chmod g+s "${{targets.contextdir}}"/usr/sbin/$i
+         chgrp postdrop "${{targets.contextdir}}"/usr/bin/$i
+         chmod g+s "${{targets.contextdir}}"/usr/bin/$i
       done
 
       mkdir -p "${{targets.contextdir}}"/usr/share/doc/postfix/defaults/ \
@@ -178,7 +177,7 @@ pipeline:
       rm makedefs.out
 
       # setgid bit for postqueue group when it exists
-      chmod 2755 ${{targets.contextdir}}/usr/sbin/postqueue ${{targets.contextdir}}/usr/sbin/postdrop
+      chmod 2755 ${{targets.contextdir}}/usr/bin/postqueue ${{targets.contextdir}}/usr/bin/postdrop
 
       # fix /etc/postfix/postfix-files so that "postfix set-permissions" can run
       sed -i \
@@ -255,8 +254,8 @@ test:
         chown -R postfix:postfix /var/lib/postfix
 
         # Fix ownership and permissions of postqueue and postdrop executables
-        chown root:postdrop /usr/sbin/postqueue /usr/sbin/postdrop
-        chmod 2755 /usr/sbin/postqueue /usr/sbin/postdrop
+        chown root:postdrop /usr/bin/postqueue /usr/bin/postdrop
+        chmod 2755 /usr/bin/postqueue /usr/bin/postdrop
 
         set +e
         postfix -v start
@@ -283,7 +282,7 @@ test:
 
         EMAIL_CONTENT="From: $FROM_EMAIL\nTo: $TO_EMAIL\nSubject: $SUBJECT\n\n$BODY"
 
-        echo -e "$EMAIL_CONTENT" | /usr/sbin/sendmail -t
+        echo -e "$EMAIL_CONTENT" | /usr/bin/sendmail -t
 
         sleep 3
 
