sudo - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/sudo.yaml
+++ b/sudo.yaml
@@ -33,8 +33,9 @@ pipeline:
         --with-mdoc \
         --without-pam \
         --without-skey \
-        --with-sendmail=/usr/sbin/sendmail \
-        --with-passprompt="[sudo] password for %p: "
+        --with-sendmail=/usr/bin/sendmail \
+        --with-passprompt="[sudo] password for %p: " \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
