gnupg - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/gnupg.yaml
+++ b/gnupg.yaml
@@ -84,7 +84,8 @@ pipeline:
         --enable-bzip2 \
         --enable-tofu \
         --enable-scdaemon \
-        --enable-ccid-driver
+        --enable-ccid-driver \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
