gaucamole-server - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/guacamole-server.yaml
+++ b/guacamole-server.yaml
@@ -61,7 +61,8 @@ pipeline:
         --with-pango \
         --with-vnc \
         --with-telnet \
-        --with-rdp
+        --with-rdp \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
