haproxy-1.31 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/haproxy-3.1.yaml
+++ b/haproxy-3.1.yaml
@@ -49,13 +49,17 @@ pipeline:
         USE_PROMEX=1 \
         LUA_LIB=/usr/lib/lua5.3 \
         LUA_INC=/usr/include/lua5.3 \
-        USE_GETADDRINFO=1
+        USE_GETADDRINFO=1 \
+        SBINDIR=/usr/bin
   - runs: |
       make install DESTDIR="${{targets.destdir}}" PREFIX=/usr DOCDIR=/usr/share/doc/haproxy
       install -d "${{targets.destdir}}"/var/lib/haproxy
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
   - uses: strip
   # This MUST run after strip, which strips capabilities too!
-  - runs: setcap cap_net_bind_service=+eip "${{targets.destdir}}/usr/sbin/haproxy"
+  - runs: setcap cap_net_bind_service=+eip "${{targets.destdir}}/usr/bin/haproxy"
 
 subpackages:
   - name: "${{package.name}}-doc"
@@ -98,4 +102,4 @@ test:
         haproxy -v
     - name: Test file capabilities
       runs: |
-        getcap /usr/sbin/haproxy | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
+        getcap /usr/bin/haproxy | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
