gpsd - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/gpsd.yaml
+++ b/gpsd.yaml
@@ -48,6 +48,9 @@ pipeline:
       DESTDIR="${{targets.destdir}}" scons install
       install -m755 -D ./gpsd.initd "${{targets.destdir}}"/etc/init.d/gpsd
       install -m644 -D ./gpsd.confd "${{targets.destdir}}"/etc/conf.d/gpsd
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
 
 subpackages:
   - name: gpsd-dev
@@ -96,7 +99,12 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          mv "${{targets.destdir}}"/usr/bin/*  "${{targets.subpkgdir}}"/usr/bin
+          for i in "${{targets.destdir}}"/usr/bin/*; do
+            case "${i##*/}" in
+              gpsd|gpsdctl) ;;
+              *) echo "moving $i"; mv "$i" "${{targets.subpkgdir}}"/usr/bin ;;
+            esac
+          done
     description: gpsd clients
     test:
       pipeline:
