glibc - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/glibc.yaml
+++ b/glibc.yaml
@@ -104,7 +104,8 @@ pipeline:
         --with-pkgversion="glibc-${{package.full-version}}" \
         --disable-werror \
         --disable-crypt \
-        --enable-kernel=4.9
+        --enable-kernel=4.9 \
+        --sbindir=/usr/bin
 
   - runs: |
       make -C build -j$(nproc)
@@ -138,6 +139,12 @@ pipeline:
   - name: "Generate and install locale data"
     runs: |
       make -C build -j$(nproc) localedata/install-locale-files DESTDIR="${{targets.destdir}}"
+
+  - name: 'Usrmerge /usr/sbin' # Some binaries ignore --sbindir for some reason
+    runs: |
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
 
   - uses: strip
 
@@ -452,8 +459,8 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/lib
           mv "${{targets.destdir}}"/usr/lib/gconv "${{targets.subpkgdir}}"/usr/lib/
 
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/iconvconfig "${{targets.subpkgdir}}"/usr/sbin
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/iconvconfig "${{targets.subpkgdir}}"/usr/bin
     test:
       pipeline:
         - runs: |
@@ -481,11 +488,10 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
 
           mv "${{targets.destdir}}"/usr/bin/tzselect "${{targets.subpkgdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/bin/zdump "${{targets.subpkgdir}}"/usr/bin
-          mv "${{targets.destdir}}"/usr/sbin/zic "${{targets.subpkgdir}}"/usr/sbin
+          mv "${{targets.destdir}}"/usr/bin/zic "${{targets.subpkgdir}}"/usr/bin
     test:
       pipeline:
         - runs: |
@@ -578,8 +584,8 @@ subpackages:
     description: "NSS caching daemon"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/nscd "${{targets.subpkgdir}}"/usr/sbin/
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/nscd "${{targets.subpkgdir}}"/usr/bin/
     test:
       pipeline:
         - runs: |
