hwloc - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/hwloc.yaml
+++ b/hwloc.yaml
@@ -37,7 +37,8 @@ pipeline:
   - uses: autoconf/configure
     with:
       opts: |
-        --enable-plugins
+        --enable-plugins \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
