heimdal - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/heimdal.yaml
+++ b/heimdal.yaml
@@ -48,7 +48,8 @@ pipeline:
         --with-readline-include=/usr/include/readline \
         --with-sqlite3=/usr \
         --without-openssl \
-        --with-db-type-preference=
+        --with-db-type-preference= \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
