iftop - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/iftop.yaml
+++ b/iftop.yaml
@@ -26,6 +26,9 @@ pipeline:
       uri: https://www.ex-parrot.com/~pdw/iftop/download/iftop-${{package.version}}.tar.gz
 
   - uses: autoconf/configure
+    with:
+      opts: |
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
