icu - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/icu.yaml
+++ b/icu.yaml
@@ -51,7 +51,8 @@ pipeline:
         --with-data-packaging=archive \
         --disable-samples \
         --enable-static \
-        --mandir=/usr/share/man
+        --mandir=/usr/share/man \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
     with:
