ipset - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/ipset.yaml
+++ b/ipset.yaml
@@ -36,7 +36,8 @@ pipeline:
         --build=${{host.triplet.gnu}} \
         --host=${{host.triplet.gnu}} \
         --with-kmod=no \
-        --prefix=/usr
+        --prefix=/usr \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
