ipvsadm - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/ipvsadm.yaml
+++ b/ipvsadm.yaml
@@ -28,12 +28,12 @@ pipeline:
   - runs: |
       make libs && make BUILD_ROOT="${{targets.destdir}}" \
         MANDIR=usr/share/man \
-        SBIN="${{targets.destdir}}/usr/sbin" \
+        SBIN="${{targets.destdir}}/usr/bin" \
         INIT="${{targets.destdir}}/etc/init.d"
 
       make -j1 BUILD_ROOT="${{targets.destdir}}" \
         MANDIR=usr/share/man \
-        SBIN="${{targets.destdir}}/usr/sbin" \
+        SBIN="${{targets.destdir}}/usr/bin" \
         INIT="${{targets.destdir}}/etc/init.d" \
         install
 
