jitterentropy-rngd - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/jitterentropy-rngd.yaml
+++ b/jitterentropy-rngd.yaml
@@ -31,6 +31,11 @@ pipeline:
 
   - uses: autoconf/make-install
 
+  - runs: |
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
+
   - uses: strip
 
 update:
