bitnami/compat - usrmerge usr/sbin
Handles usrmerge for packages who only install to /usr/sbin because of this pipeline. This is:

* contour
* etc
* kafka
* keycloak
* kubernetes-event-exporter
* logstash
* mc
* memcached
* minio
* mlflow
* pgpool
* postgres
* prometheus
* prometheus-pushgateway
* rabbitmq-server
* repmgr
* spark
* zookeeper

Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/pipelines/bitnami/compat.yaml
+++ b/pipelines/bitnami/compat.yaml
@@ -9,12 +9,10 @@ inputs:
     description: |
       The bitnami image.
     required: true
-
   version-path:
     description: |
       The path to the root of the Dockerfile, relative to the image name.
     required: true
-
   commit:
     description: |
       The commit to check out for the bitnami repo
@@ -26,6 +24,7 @@ pipeline:
       repository: https://github.com/bitnami/containers
       branch: main
       destination: bitnami-containers
+
   - runs: |
       mkdir -p ${{targets.contextdir}}
 
@@ -48,3 +47,6 @@ pipeline:
       if [ -d "./bitnami/${{inputs.image}}/${{inputs.version-path}}/rootfs" ]; then
         cp -rf ./bitnami/${{inputs.image}}/${{inputs.version-path}}/rootfs/* ${{targets.contextdir}}/
       fi
+      mkdir -p "${{targets.contextdir}}"/usr/bin
+      mv "${{targets.contextdir}}"/usr/sbin/* "${{targets.contextdir}}"/usr/bin
+      rmdir "${{targets.contextdir}}"/usr/sbin
