--- a/rsyslog.yaml
+++ b/rsyslog.yaml
@@ -1,7 +1,7 @@
 package:
   name: rsyslog
   version: 8.2412.0
-  epoch: 2
+  epoch: 3
   description: a Rocket-fast SYStem for LOG processing
   copyright:
     - license: Apache-2.0
@@ -45,6 +45,7 @@ environment:
       - mysql
       - mysql-dev
       - net-snmp-dev
+      - openssl-dev
       - pkgconf
       - pkgconf-dev
       - postgresql-dev
@@ -144,7 +145,8 @@ pipeline:
         --enable-mmsnmptrapd \
         --enable-omrabbitmq \
         --enable-omhiredis \
-        --enable-imdocker
+        --enable-imdocker \
+        --enable-openssl
 
   - uses: autoconf/make
 
