--- a/rabbitmq-server-4.0.yaml
+++ b/rabbitmq-server-4.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: rabbitmq-server-4.0
   version: "4.0.6"
-  epoch: 0
+  epoch: 1
   description: Open source RabbitMQ. core server and tier 1 (built-in) plugins
   copyright:
     - license: MPL-2.0
@@ -21,7 +21,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - elixir
+      - elixir-1.17
       # pinning to version 26 for now as erlang-27 is causing performance issues according to upstream. https://www.rabbitmq.com/docs/which-erlang#erlang-27-support
       - erlang-26
       - erlang-26-dev
