fix(rsyslog): do not ship files that may clash at build time
Signed-off-by: Luca Di Maio <luca.dimaio1@gmail.com>

--- a/rsyslog.yaml
+++ b/rsyslog.yaml
@@ -1,12 +1,19 @@
 package:
   name: rsyslog
   version: 8.2412.0
-  epoch: 2
+  epoch: 3
   description: a Rocket-fast SYStem for LOG processing
   copyright:
     - license: Apache-2.0
     - license: GPL-3.0-or-later
     - license: LGPL-3.0-or-later
+  scriptlets:
+    post-install: |
+      #!/bin/sh
+      # rsyslogd will default to pid files in /var/run
+      mkdir -p /var
+      [ -e /var/run ] || ln -sf ../run /var/run
+      exit 0
 
 environment:
   contents:
@@ -152,9 +159,6 @@ pipeline:
 
   - runs: |
       make check
-      # rsyslogd will default to pid files in /var/run
-      mkdir -p ${{targets.destdir}}/var
-      ln -sf ../run ${{targets.destdir}}/var/run # We probably want to move this to wolfi-baselayout
 
   - uses: strip
 
