wip(rabbitmq-server-4.0.yaml): add test for json formatter
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>
Co-authored-by: Luca Di Maio <luca.dimaio@chainguard.dev>

--- a/rabbitmq-server-4.0.yaml
+++ b/rabbitmq-server-4.0.yaml
@@ -144,3 +144,14 @@ test:
     - runs: |
         rabbitmq-plugins version
         rabbitmq-plugins --version
+    #- name: Run RabbitMQ server
+    #  runs: |
+    #    mkdir /var/log/rabbitmq
+    #    mkdir /var/lib/rabbitmq
+    #    adduser rabbitmq
+    #    chown rabbitmq:rabbitmq -R /var/log/rabbitmq
+    #    chown rabbitmq:rabbitmq -R /var/lib/rabbitmq
+    #    su rabbitmq -c sh -c "RABBITMQ_ADVANCED_CONFIG_FILE=/etc/rabbitmq/advanced.config RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq.conf RABBITMQ_CONF_ENV_FILE=/etc/rabbitmq/rabbitmq-env.conf /usr/sbin/rabbitmq-server"
+    #- name: Test JSON formatter
+    #  runs: |
+    #    su rabbitmq -c sh -c 'ELIXIR_ERL_OPTIONS="+fn" /usr/lib/rabbitmq/bin/rabbitmq-diagnostics environment --formatter json'
