--- a/kyverno-1.13.yaml
+++ b/kyverno-1.13.yaml
@@ -1,7 +1,7 @@
 package:
   name: kyverno-1.13
   version: "1.13.4"
-  epoch: 0
+  epoch: 1
   description: Kubernetes Native Policy Management
   copyright:
     - license: Apache-2.0
@@ -14,7 +14,7 @@ package:
 var-transforms:
   - from: ${{package.name}}
     match: '.*-(\d+\.\d+).*'
-    replace: '$1'
+    replace: "$1"
     to: major-minor-version
 
 environment:
@@ -33,11 +33,6 @@ pipeline:
       expected-commit: c6e3bcddee8648b95ab717e658e541809705f9bb
       repository: https://github.com/kyverno/kyverno
       tag: v${{package.version}}
-
-  - uses: go/bump
-    with:
-      deps: |-
-        github.com/go-git/go-git/v5@v5.13.0
 
   - uses: patch
     # This patch (ideally) can be removed when a new release is cut by the kyverno maintainers.
