selenium: build with -fomit-frame-pointer
This avoids a build failure on aarch64:

```
ERROR: /home/build/.cache/bazel/_bazel_root/79a1bfc8c8b5b6a6d226b38d072f165b/external/rules_java++toolchains+remote_java_tools/BUILD:256:11: Compiling java_tools/src/main/cpp/util/file_posix.cc [for tool] failed: (Exit 1): gcc failed: error executing CppCompile command (from target @@rules_java++toolchains+remote_java_tools//:filesystem)
  (cd /home/build/.cache/bazel/_bazel_root/79a1bfc8c8b5b6a6d226b38d072f165b/sandbox/processwrapper-sandbox/290/execroot/_main && \
  exec env - \
    PATH=/bin:/usr/bin:/usr/local/bin \
    PWD=/proc/self/cwd \
  /usr/local/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 '-D_FORTIFY_SOURCE=1' -DNDEBUG -ffunction-sections -fdata-sections '-std=c++17' -MD -MF bazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_objs/filesystem/file_posix.d '-frandom-seed=bazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_objs/filesystem/file_posix.o' -DBLAZE_OPENSOURCE -iquote external/rules_java++toolchains+remote_java_tools -iquote bazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools -Ibazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_virtual_includes/filesystem -Ibazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_virtual_includes/blaze_exit_code -Ibazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_virtual_includes/errors -Ibazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_virtual_includes/logging -Ibazel-out/aarch64-opt-exec-ST-d57f47055a04/bin/external/rules_java++toolchains+remote_java_tools/_virtual_includes/strings -Ibazel-out/aarch64-opt-exec-ST-d57f4705

--- a/selenium.yaml
+++ b/selenium.yaml
@@ -48,7 +48,11 @@ pipeline:
   - runs: |
       export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/lib:/usr/lib
 
-      bazel build grid
+      # https://github.com/wolfi-dev/os/issues/34075
+      bazel build \
+        --cxxopt=-fomit-frame-pointer \
+        --host_cxxopt=-fomit-frame-pointer \
+        grid
       mkdir -p "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/usr/share/java/${{package.name}}/bin
       install -Dm755 bazel-bin/java/src/org/openqa/selenium/grid/selenium "${{targets.destdir}}"/usr/share/java/${{package.name}}/bin/selenium
