patroni: depend on py3-psutil
This avoids a malcontent failure in this package, as well as allowing us
to remediate CVEs for psutil more easily.

--- a/patroni.yaml
+++ b/patroni.yaml
@@ -8,6 +8,7 @@ package:
   dependencies:
     runtime:
       - py3-boto3
+      - py3-psutil
       - py3-psycopg
 
 environment:
@@ -19,6 +20,7 @@ environment:
       - ca-certificates-bundle
       - py3-boto3
       - py3-pip
+      - py3-psutil
       - py3-psycopg
       - python3-dev
 
