add compat package
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -37,6 +37,22 @@ pipeline:
       output: geth
 
 subpackages:
+  - name: "${{package.name}}-compat"
+    description: "Compatibility package to place binaries in the same location used by the upstream image"
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/local/bin
+          ln -sf /usr/bin/geth ${{targets.subpkgdir}}/usr/local/bin/geth
+    test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
+      pipeline:
+        - runs: |
+            /usr/local/bin/geth version
+            /usr/local/bin/geth --help
+
   - name: ${{package.name}}-clef
     pipeline:
       - uses: go/build
