fix(tctl.yaml): Remove deprecated tctl packages
tctl has been deprecated https://github.com/temporalio/tctl in favor of https://github.com/temporalio/cli.

We already publish the cli via package `temporal`.

tctl was only present in the temporal-server, temporal-server-fips, temporal-admin-tools-fips and temporal-admin-tools images.

These have now been removed via PRs:
* https://github.com/chainguard-images/images-private/pull/7606
* https://github.com/chainguard-images/images-private/pull/7611
* https://github.com/chainguard-images/images-private/pull/7617

Signed-off-by: philroche <phil.roche@chainguard.dev>

--- a/temporal-server.yaml
+++ b/temporal-server.yaml
@@ -1,13 +1,13 @@
 package:
   name: temporal-server
   version: 1.26.2
-  epoch: 2
+  epoch: 3
   description: Temporal server executes units of application logic, Workflows, in a resilient manner that automatically handles intermittent failures, and retries failed operations
   copyright:
     - license: MIT
   dependencies:
     runtime:
-      - tctl
+      - temporal
 
 environment:
   contents:
@@ -16,7 +16,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
-      - tctl
+      - temporal
       - wolfi-baselayout
   environment:
     CGO_ENABLED: 0
@@ -118,7 +118,7 @@ subpackages:
       runtime:
         - bash
         - temporal-docker-builds
-        - tctl
+        - temporal
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/temporal/config/dynamicconfig
