Fixed expected commit, cypress version mismatch

--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -115,7 +115,7 @@ subpackages:
           repository: https://github.com/opensearch-project/opensearch-build
           tag: ${{package.version}}
           destination: opensearch-build
-          expected-commit: 6149528e098d8c894eccdecc11914c1d77b9379f # will need to be manually updated when opensearch dashboard auto update happens
+          expected-commit: 58c499356b52e438ff2cbf71a75e893c99357d5d # will need to be manually updated when opensearch dashboard auto update happens
       - runs: |
           install -Dm755 opensearch-build/docker/release/config/opensearch-dashboards/opensearch-dashboards-docker-entrypoint-2.x.sh ${{targets.contextdir}}/usr/share/opensearch-dashboards/opensearch-dashboards-docker-entrypoint.sh
           install -Dm655 opensearch-build/config/opensearch_dashboards-2.x.yml ${{targets.contextdir}}/usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
@@ -144,7 +144,18 @@ subpackages:
             jq --argjson dependencies "$dependencies" '.dependencies += $dependencies' package.json > temp.json && mv temp.json package.json
           fi
 
-          yarn osd bootstrap --allow-root --silent 2>/dev/null
+          # Downgrade cypress version to 12.17.4 if this is securityDashboard due to upstream problem:
+          # ERROR [single_version_dependencies] Multiple version ranges for the same dependency were found declared across different package.json files.
+          # This should be able to be removed in future versions, once upstream corrects the issue.
+          if [ ${{range.value}} = "securityDashboards" ]
+          then
+            # Define the dependencies
+            dependencies='{"cypress": "12.17.4"}'
+            # Apply the dependencies
+            jq --argjson dependencies "$dependencies" '.dependencies += $dependencies' package.json > temp.json && mv temp.json package.json
+          fi
+
+          yarn osd bootstrap --allow-root 2>/dev/null
           node /home/build/scripts/plugin_helpers build --allow-root --skip-archive
 
           if [ ${{range.value}} = "reportsDashboards" ]
