bird - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/bird.yaml
+++ b/bird.yaml
@@ -39,7 +39,8 @@ pipeline:
         --mandir=/usr/share/man \
         --localstatedir=/var \
         --runstatedir=/run \
-        --enable-libssh
+        --enable-libssh \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
