crac-criu - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/crac-criu.yaml
+++ b/crac-criu.yaml
@@ -55,6 +55,11 @@ pipeline:
     with:
       opts: PREFIX=/usr
 
+  - runs: |
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
+
   - uses: strip
 
 update:
@@ -68,8 +73,8 @@ update:
 test:
   pipeline:
     - runs: |
-        # check at least if the binary is there in usr/sbin/criu
-        if [ ! -f "/usr/sbin/crac-criu" ]; then
+        # check at least if the binary is there in usr/bin/criu
+        if [ ! -f "/usr/bin/crac-criu" ]; then
           echo "criu binary not found"
           exit 1
         fi
