kmod - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/kmod.yaml
+++ b/kmod.yaml
@@ -47,7 +47,8 @@ pipeline:
         --with-zlib \
         --with-xz \
         --with-zstd \
-        --with-openssl
+        --with-openssl \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
@@ -55,9 +56,8 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.destdir}}/usr/bin
-      mkdir -p ${{targets.destdir}}/usr/sbin
       for i in lsmod rmmod insmod modinfo modprobe depmod; do
-        ln -sf ../bin/kmod ${{targets.destdir}}/usr/sbin/$i
+        ln -sf kmod ${{targets.destdir}}/usr/bin/$i
       done
 
   - uses: strip
