libatasmart - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/libatasmart.yaml
+++ b/libatasmart.yaml
@@ -27,7 +27,8 @@ pipeline:
     with:
       opts: |
         --disable-static \
-        --localstatedir=/var
+        --localstatedir=/var \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
