krb5 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/krb5.yaml
+++ b/krb5.yaml
@@ -50,7 +50,8 @@ pipeline:
         --with-system-et \
         --with-system-ss \
         --with-system-verto \
-        --with-ldap
+        --with-ldap \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
     with:
@@ -104,10 +105,12 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/share
           mkdir -p ${{targets.subpkgdir}}/usr/bin
 
+          for i in ${{targets.destdir}}/usr/bin/*; do
+            case "${i##*/}" in
+              sclient|gss-server|kadmin.local|kadmind|kdb5_ldap_util|kdb5_util|kprop|kpropd|kproplog|krb5-send-pr|krb5kdc|sim_server|sserver|uuserver) mv "$i" ${{targets.subpkgdir}}/usr/bin ;;
+            esac
+          done
           install -d ${{targets.subpkgdir}}/var/lib/krb5kdc
-          mv ${{targets.destdir}}/usr/sbin ${{targets.subpkgdir}}/usr/
-
-          mv ${{targets.destdir}}/usr/bin/sclient ${{targets.subpkgdir}}/usr/bin/
     description: The KDC and related programs for Kerberos 5
     test:
       pipeline:
