libcap - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/libcap.yaml
+++ b/libcap.yaml
@@ -25,7 +25,7 @@ pipeline:
   - runs: |
       set -x
       make BUILD_CC=gcc CC=gcc lib=lib prefix=/usr DESTDIR="${{targets.destdir}}"
-      make lib=/lib prefix=/usr RAISE_SETFCAP=no DESTDIR="${{targets.destdir}}" install
+      make sbindir=/bin lib=/lib prefix=/usr RAISE_SETFCAP=no DESTDIR="${{targets.destdir}}" install
       chmod 755 "${{targets.destdir}}/usr/lib/libcap.so.${{package.version}}"
 
   - uses: strip
@@ -48,11 +48,11 @@ subpackages:
     pipeline:
       - runs: |
           set -x
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
           for i in capsh getcap getpcaps setcap; do
-            mv "${{targets.destdir}}"/usr/sbin/$i "${{targets.subpkgdir}}"/usr/sbin/
+            mv "${{targets.destdir}}"/usr/bin/$i "${{targets.subpkgdir}}"/usr/bin/
           done
-          rm -rf "${{targets.destdir}}/usr/sbin"
+          rmdir "${{targets.destdir}}/usr/bin"
     dependencies:
       runtime:
         - libcap
