lighttpd - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -56,7 +56,8 @@ pipeline:
         --with-pcre2 \
         --with-brotli \
         --with-zstd \
-        --with-dbi
+        --with-dbi \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
