linux-pam - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/linux-pam.yaml
+++ b/linux-pam.yaml
@@ -34,6 +34,7 @@ pipeline:
             -Dmandir=/usr/share/man \
             -Dinfodir=/usr/share/info \
             -Dlocalstatedir=/var \
+            -Dsbindir=/usr/bin
 
   - uses: meson/compile
 
@@ -47,8 +48,8 @@ pipeline:
       done
 
       # make "unix_chkpwd" shadow group and enable g+s
-      chgrp shadow ${{targets.destdir}}/sbin/unix_chkpwd \
-        && chmod g+s ${{targets.destdir}}/sbin/unix_chkpwd
+      chgrp shadow ${{targets.destdir}}/bin/unix_chkpwd \
+        && chmod g+s ${{targets.destdir}}/bin/unix_chkpwd
 
       # Don't ship /var/run
       rm -r ${{targets.destdir}}/var/run
