lm-sensors - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/lm-sensors.yaml
+++ b/lm-sensors.yaml
@@ -44,6 +44,7 @@ pipeline:
       make PROG_EXTRA:=sensord user_install \
       PREFIX=/usr \
       MANDIR=/usr/share/man \
+      SBINDIR=/usr/bin \
       DESTDIR="${{targets.destdir}}"
 
   - uses: strip
@@ -52,9 +53,9 @@ subpackages:
   - name: lm-sensors-detect
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/bin "${{targets.subpkgdir}}"/usr/sbin
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/bin/sensors-conf-convert "${{targets.subpkgdir}}"/usr/bin/
-          mv "${{targets.destdir}}"/usr/sbin/sensors-detect "${{targets.subpkgdir}}"/usr/bin/
+          mv "${{targets.destdir}}"/usr/bin/sensors-detect "${{targets.subpkgdir}}"/usr/bin/
     description: Detection/migration scripts for lm-sensors
 
   - name: lm-sensors-dev
@@ -82,8 +83,8 @@ subpackages:
   - name: lm-sensors-sensord
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/sensord "${{targets.subpkgdir}}"/usr/sbin/sensord
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/sensord "${{targets.subpkgdir}}"/usr/bin/sensord
     description: sensord daemon
 
   - name: lm-sensors-sensord-openrc
