--- a/logrotate.yaml
+++ b/logrotate.yaml
@@ -34,7 +34,8 @@ pipeline:
       --sysconfdir=/etc \
       --mandir=/usr/share/man \
       --localstatedir=/var \
-      --with-acl
+      --with-acl \
+      --sbindir=/usr/bin
 
   - uses: autoconf/make
 
