fix(jdk): Add lcms2 at runtime
Also add missing runtime dependencies for OpenJDK 24

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/openjdk-24.yaml
+++ b/openjdk-24.yaml
@@ -1,13 +1,25 @@
 package:
   name: openjdk-24
   version: 24_beta16
-  epoch: 4
+  epoch: 5
   description: OpenJDK 24 Early Access Package
   copyright:
     - license: GPL-2.0-or-later
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - lcms2
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
     provides:
       - java-ea=24
