--- a/openjdk-17.yaml
+++ b/openjdk-17.yaml
@@ -1,7 +1,7 @@
 package:
   name: openjdk-17
   version: "17.0.14" # TODO(jason): on version bump ensure to update downstream projects that are pinned to a specific prerelease version, i.e. https://github.com/chainguard-images/images/tree/main/images
-  epoch: 1
+  epoch: 2
   description:
   copyright:
     - license: GPL-2.0-only
@@ -11,6 +11,7 @@ package:
       - freetype
       - giflib
       - java-cacerts
+      - lcms2
       - libfontconfig1
       - libjpeg-turbo
       - libx11
