--- a/openjdk-21.yaml
+++ b/openjdk-21.yaml
@@ -1,7 +1,7 @@
 package:
   name: openjdk-21
   version: "21.0.6"
-  epoch: 1
+  epoch: 2
   description:
   copyright:
     - license: GPL-2.0-or-later
@@ -11,6 +11,7 @@ package:
       - freetype
       - giflib
       - java-cacerts
+      - lcms2
       - libfontconfig1
       - libjpeg-turbo
       - libx11
