--- a/openjdk-22.yaml
+++ b/openjdk-22.yaml
@@ -1,7 +1,7 @@
 package:
   name: openjdk-22
   version: 22.0.2
-  epoch: 4
+  epoch: 5
   description: OpenJDK 22
   copyright:
     - license: GPL-2.0-or-later
@@ -11,6 +11,7 @@ package:
       - freetype
       - giflib
       - java-cacerts
+      - lcms2
       - libfontconfig1
       - libjpeg-turbo
       - libx11
