--- a/openjdk-23.yaml
+++ b/openjdk-23.yaml
@@ -1,7 +1,7 @@
 package:
   name: openjdk-23
   version: "23.0.2"
-  epoch: 1
+  epoch: 2
   description: OpenJDK 23
   copyright:
     - license: GPL-2.0-or-later
@@ -11,6 +11,7 @@ package:
       - freetype
       - giflib
       - java-cacerts
+      - lcms2
       - libfontconfig1
       - libjpeg-turbo
       - libx11
