--- a/lshw.yaml
+++ b/lshw.yaml
@@ -24,6 +24,8 @@ pipeline:
   - uses: autoconf/make
 
   - uses: autoconf/make-install
+    with:
+      opts: SBINDIR=/usr/bin
 
   - uses: strip
 
