--- a/man-db.yaml
+++ b/man-db.yaml
@@ -32,6 +32,9 @@ pipeline:
       uri: https://download.savannah.nongnu.org/releases/man-db/man-db-${{package.version}}.tar.xz
 
   - uses: autoconf/configure
+    with:
+      opts: |
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
