libeconf.yaml: Use meson/configure
This fixes an issue with the installation path by using /usr as the
prefix instead of /usr/local.

Signed-off-by: Sergio Durigan Junior <sergiodj@chainguard.dev>

--- a/libeconf.yaml
+++ b/libeconf.yaml
@@ -23,7 +23,9 @@ pipeline:
       repository: https://github.com/openSUSE/libeconf
       tag: v${{package.version}}
 
-  - runs: meson build
+  - uses: meson/configure
+    with:
+      output-dir: build
 
   - runs: ninja -C build
 
