libeconf.yaml: Simplify subpackage declaration
We don't need to use "range".

Signed-off-by: Sergio Durigan Junior <sergiodj@chainguard.dev>

--- a/libeconf.yaml
+++ b/libeconf.yaml
@@ -32,8 +32,7 @@ pipeline:
   - runs: DESTDIR="${{targets.destdir}}" ninja -C build install
 
 subpackages:
-  - range: ""
-    name: libeconf-dev
+  - name: libeconf-dev
     pipeline:
       - uses: split/dev
     dependencies:
