libeconf.yaml: Run test/pkgconf
Fixes: #37189

Signed-off-by: Sergio Durigan Junior <sergiodj@chainguard.dev>

--- a/libeconf.yaml
+++ b/libeconf.yaml
@@ -39,6 +39,9 @@ subpackages:
       runtime:
         - libeconf
     description: libeconf dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
@@ -48,6 +51,7 @@ update:
 
 test:
   pipeline:
+    - uses: test/pkgconf
     - name: "Verify econftool availability"
       runs: |
         econftool --help
