change version of ceph to 19.2.1 and patches
Signed-off-by: Mritunjay <mritunjay.sharma@chainguard.dev>

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -1,6 +1,7 @@
 package:
   name: ceph
-  version: 17.2.8
+  version: 19.2.1
+  epoch: 0
   description: Distributed object, block, and file storage
   copyright:
     - license: LGPL-2.1
@@ -68,6 +69,7 @@ environment:
       - python-3.13-dev
       - snappy-dev
       - systemd-dev
+      - thrift-dev
       - util-linux-dev
       - xfsprogs
       - yaml-cpp-dev
@@ -78,8 +80,12 @@ pipeline:
     with:
       repository: https://github.com/ceph/ceph.git
       tag: v${{package.version}}
-      expected-commit: f817ceb7f187defb1d021d6328fa833eb8e943b3
+      expected-commit: 58a7fab8be0a062d730ad7da874972fd3fba59fb
       recurse-submodules: true
+
+  - uses: patch
+    with:
+      patches: ceph.patch boost-1.87.patch
 
   - uses: cmake/configure
     with:
