chore(rsyslog): Enable support for OpenSSL (#43283)
Link against OpenSSL

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>
Signed-off-by: Furkan Türkal <furkan.turkal@chainguard.dev>
Co-authored-by: Furkan Türkal <furkan.turkal@chainguard.dev>

--- a/rsyslog.yaml
+++ b/rsyslog.yaml
@@ -1,7 +1,7 @@
 package:
   name: rsyslog
   version: 8.2412.0
-  epoch: 3
+  epoch: 4
   description: a Rocket-fast SYStem for LOG processing
   copyright:
     - license: Apache-2.0
@@ -45,6 +45,7 @@ environment:
       - mysql
       - mysql-dev
       - net-snmp-dev
+      - openssl-dev
       - pkgconf
       - pkgconf-dev
       - postgresql-dev
@@ -147,6 +148,7 @@ pipeline:
         --enable-omrabbitmq \
         --enable-omhiredis \
         --enable-imdocker \
+        --enable-openssl \
         --runstatedir=/run
 
   - uses: autoconf/make
