--- a/logstash-8.yaml
+++ b/logstash-8.yaml
@@ -39,6 +39,10 @@ var-transforms:
     replace: $1
     to: major-version
 
+vars:
+  separately-packaged-plugins: |
+    logstash-filter-xml logstash-integration-jdbc
+
 environment:
   contents:
     packages:
@@ -90,15 +94,13 @@ pipeline:
       echo "gem 'net-imap', '0.5.6'" >> Gemfile.template
       # Fix GHSA-xc9x-jj77-9p9j
       sed -i "s/'date', '>= 3.3.3'/'date', '>= 3.4.1'/" "Gemfile.template"
-      # Disable the logstash-integration-jdbc plugin download as we build and
-      # package it separately
-      jq 'del(.["logstash-integration-jdbc"])' rakelib/plugins-metadata.json > /tmp/plugins-metadata.json
-      mv /tmp/plugins-metadata.json rakelib/
 
-      # Disable the logstash-filter-xml plugin download as we build and
-      # package it separately
-      jq 'del(.["logstash-filter-xml"])' rakelib/plugins-metadata.json > /tmp/plugins-metadata.json
-      mv /tmp/plugins-metadata.json rakelib/
+      for plugin in ${{vars.separately-packaged-plugins}}
+      do
+        # Disable the plugin download as we build and package it separately
+        jq --arg plugin $plugin 'del(.[$plugin])' rakelib/plugins-metadata.json > /tmp/plugins-metadata.json
+        mv /tmp/plugins-metadata.json rakelib/
+      done
 
       # Disable -Werror which means that warnings are not treated as errors
       # during compilation.  Required for Java 21.
@@ -119,9 +121,7 @@ pipeline:
 
   - name: Re-inject default plugins that have been patched
     runs: |
-      for gem in \
-        "logstash-integration-jdbc" \
-        "logstash-filter-xml";
+      for gem in ${{vars.separately-packaged-plugins}}
       do
         echo "Searching for gem search=$gem-*.gem"
         gem_path=$(find /usr/share/jruby -type f -name "$gem-*.gem")
@@ -413,8 +413,10 @@ test:
         packages: ${{package.name}}
     - name: Ensure default plugins were actually installed
       runs: |
-        logstash-plugin list | grep logstash-integration-jdbc
-        logstash-plugin list | grep logstash-filter-xml
+        for plugin in ${{vars.separately-packaged-plugins}}
+        do
+          logstash-plugin list | grep $plugin
+        done
         logstash --version
         logstash.lib.sh --version
         logstash.lib.sh --help
