logstash-8: add new separately packaged plugins
Namely `logstash-input-beats`, `logstash-input-http`, and
`logstash-input-tcp` to remediate CVEs in them; and
`logstash-input-graphite`, `logstash-input-elastic_serverless_forwarder`
and `logstash-integration-logstash` which depend on `-http` and `-tcp`
(and so pull unremediated versions in if not separated out).

--- a/logstash-8.yaml
+++ b/logstash-8.yaml
@@ -17,7 +17,7 @@
 package:
   name: logstash-8
   version: "8.17.2"
-  epoch: 1
+  epoch: 2
   description: Logstash - transport and process your logs, events, or other data
   copyright:
     - license: Apache-2.0
@@ -41,7 +41,7 @@ var-transforms:
 
 vars:
   separately-packaged-plugins: |
-    logstash-filter-xml logstash-integration-jdbc
+    logstash-filter-xml logstash-input-beats logstash-input-http logstash-input-tcp logstash-integration-jdbc logstash-input-graphite logstash-input-elastic_serverless_forwarder logstash-integration-logstash
 
 environment:
   contents:
@@ -58,7 +58,13 @@ environment:
       - jq
       - jruby-9.4
       - logstash-filter-xml
+      - logstash-input-beats
+      - logstash-input-elastic_serverless_forwarder
+      - logstash-input-graphite
+      - logstash-input-http
+      - logstash-input-tcp
       - logstash-integration-jdbc
+      - logstash-integration-logstash
       - logstash-output-opensearch
       - net-tools
       - openjdk-17-default-jdk
