pipelines/test/ldd-check.yaml: Add new extra_library_paths parameter
This is needed for those packages that install libraries under non
standard locations (like /usr/libexec/).  These paths need to be
passed to LD_LIBRARY_PATH in order for the checks to succeed.

Signed-off-by: Sergio Durigan Junior <sergiodj@chainguard.dev>

--- a/pipelines/test/ldd-check.yaml
+++ b/pipelines/test/ldd-check.yaml
@@ -20,6 +20,10 @@ inputs:
       Should the full ldd output be shown
     required: false
     default: false
+  extra_library_paths:
+    description: |
+      Extra paths that should be added to LD_LIBRARY_PATH
+    required: false
 
 pipeline:
   - name: "check for missing library dependencies using ldd"
@@ -40,6 +44,7 @@ pipeline:
       files="${{inputs.files}}"
       packages="${{inputs.packages}}"
       VERBOSE="${{inputs.verbose}}"
+      extra_library_paths="${{inputs.extra_library_paths}}"
       case "$VERBOSE" in
         true|false) :;;
         *) error "VERBOSE must be 'true' or 'false'. found '$VERBOSE'";;
@@ -51,6 +56,10 @@ pipeline:
       vmsg() {
         [ "$VERBOSE" = "false" ] || echo "$@"
       }
+
+      if [ -n "$extra_library_paths" ]; then
+        vmsg "Testing with extra library paths: $extra_library_paths"
+      fi
 
       failormsg() {
         local cond="$1" msg="$2"
@@ -82,7 +91,7 @@ pipeline:
       check_file() {
         local f="$1" insist_dyn="$2" rc="0"
         local outf="$tmpd/ldd.stdout" errf="$tmpd/ldd.sterr"
-        local ld_library_path=$LD_LIBRARY_PATH
+        local ld_library_path="$extra_library_paths:"
 
         if [ ! -e "$f" ]; then
           failormsg "$insist_dyn" "$f: did not exist"
@@ -95,12 +104,11 @@ pipeline:
 
         case "$f" in
           *python*site-packages*)
-            [ -n "$ld_library_path" ] && ld_library_path=$ld_library_path:
-            ld_library_path=$(dirname "$f")
+            ld_library_path="$(dirname "$f"):$ld_library_path"
             vmsg "Added python site package directory to ld_library_path, result is $ld_library_path"
         esac
 
-        LD_LIBRARY_PATH=$ld_library_path ldd "$f" >$outf 2>$errf || rc=$?
+        LD_LIBRARY_PATH="$ld_library_path:$LD_LIBRARY_PATH" ldd "$f" >$outf 2>$errf || rc=$?
 
         if [ $rc -eq 1 ]; then
           if grep -q 'not a dynamic executable' "$errf"; then
