--- a/neon.yaml
+++ b/neon.yaml
@@ -1,7 +1,7 @@
 package:
   name: neon
   version: "7930"
-  epoch: 0
+  epoch: 1
   description: "Serverless Postgres. We separated storage and compute to offer autoscaling, branching, and bottomless storage."
   copyright:
     - license: Apache-2.0
@@ -65,6 +65,9 @@ pipeline:
       # neon where to find the postgres binaries.
       # POSTGRES_DISTRIB_DIR=/usr/libexec
       mkdir -p "${{targets.destdir}}"/usr/libexec/neon
+
+      # When updating these paths, don't forget to update the
+      # "extra_library_paths" parameter of the ldd-check test.
       mv pg_install/v14 "${{targets.destdir}}"/usr/libexec/neon/v14
       mv pg_install/v15 "${{targets.destdir}}"/usr/libexec/neon/v15
       mv pg_install/v16 "${{targets.destdir}}"/usr/libexec/neon/v16
@@ -110,3 +113,7 @@ test:
       runs: |
         storage_broker --version
         storage_broker --help
+    - uses: test/ldd-check
+      with:
+        packages: ${{package.name}}
+        extra_library_paths: "/usr/libexec/neon/v14/lib:/usr/libexec/neon/v15/lib:/usr/libexec/neon/v16/lib"
