superset: don't ship upstream tests in built package

--- a/superset.yaml
+++ b/superset.yaml
@@ -79,6 +79,9 @@ pipeline:
       # translations for the web application, Is a non-blocking call, so errors may be ignored
       flask fab babel-compile --target superset/translations
 
+      # Remove malware-scan-triggering tests folder from built package
+      rm -rf venv/lib/python${{vars.python-version}}/site-packages/tests/
+
   - runs: |
       mkdir -p ${{targets.destdir}}/usr/share/superset
       mv venv ${{targets.destdir}}/usr/share/superset
