--- a/spark-3.5/pombump-deps.yaml
+++ b/spark-3.5/pombump-deps.yaml
@@ -15,6 +15,6 @@ patches:
     - groupId: org.apache.hive
       artifactId: hive-llap-common
       version: 4.0.0
-    - groupId: org.apache.hive
-      artifactId: hive-exec
-      version: 4.0.1
+    - groupId: org.eclipse.jetty
+      artifactId: jetty-server
+      version: 9.4.56
