Add the pkgconf test to percona-server-9.0-dev

--- a/percona-server-9.0.yaml
+++ b/percona-server-9.0.yaml
@@ -136,6 +136,9 @@ subpackages:
     description: "headers for percona-server"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-oci-entrypoint
     description: Entrypoint for using Percona Server in OCI containers
