add coreutils at build time
it was required because ln command from busybox doesn't ship with
--force flag.

at build time, as per the logs, --force was being used.

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/kmod.yaml
+++ b/kmod.yaml
@@ -14,6 +14,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - coreutils
       - gtk-doc
       - libtool
       - libxslt
