replace cel-go with older version to fix build
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/grafana-11.5.yaml
+++ b/grafana-11.5.yaml
@@ -41,7 +41,8 @@ pipeline:
   - uses: go/bump
     with:
       deps: |-
-        github.com/openfga/openfga@v1.8.5
+        github.com/openfga/openfga@v1.8.6
+      replaces: github.com/google/cel-go=github.com/google/cel-go@v0.22.1
 
   - name: Build
     runs: |
