Update the expected commit SHA. Add test for the compact subpackage
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/gitlab-pages-17.9.yaml
+++ b/gitlab-pages-17.9.yaml
@@ -20,7 +20,7 @@ pipeline:
     with:
       repository: https://gitlab.com/gitlab-org/gitlab-pages.git
       tag: v${{package.version}}
-      expected-commit: f962b7542c287c4101994f80e98be0c0ccefc0c8
+      expected-commit: df08e165129fc6f317800f479b6c96b9d027b8a0
 
   - uses: go/build
     with:
@@ -43,6 +43,15 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.contextdir}}/bin
           ln -sf /usr/bin/gitlab-pages ${{targets.contextdir}}/bin/gitlab-pages
+    test:
+      environment:
+        contents:
+          packages:
+            - gitlab-pages-${{vars.major-minor-version}}
+      pipeline:
+        - runs: |
+            test -x /bin/gitlab-pages
+            /bin/gitlab-pages --version
 
 update:
   enabled: true
