--- a/gitlab-kas-17.9.yaml
+++ b/gitlab-kas-17.9.yaml
@@ -20,7 +20,7 @@ pipeline:
     with:
       repository: https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent
       tag: v${{package.version}}
-      expected-commit: 76633101005225c164a771d275cf6d80e6e01a1a
+      expected-commit: 7136de01792f1122b401f44cdc6f460d2e3deb07
 
   - uses: go/build
     with:
@@ -40,6 +40,9 @@ subpackages:
           packages: ./cmd/agentk
           output: agentk
           ldflags: "-w -X gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v17/cmd.Version=v${{package.version}} -X gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v17/cmd.Commit=v${{package.version}} -X gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v17/cmd.BuildTime=$(date +%F-%T)"
+    test:
+      pipeline:
+        - runs: agentk --version
 
 update:
   enabled: true
