Update the base image tag and docker machine tag and corespondig commit SHA to match the current upstream
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/gitlab-runner-17.9.yaml
+++ b/gitlab-runner-17.9.yaml
@@ -1,8 +1,10 @@
 vars:
-  docker-machine-tag: v0.16.2-gitlab.31
-  docker-machine-commit: 115286f8c18fc5ebb2181bb56a04ae23eef40135
-  base-images-tag: 0.0.4
-  base-images-commit: 447dbe49323fc5d5b0f4fe08d54f557b5b5e90fe
+  # GitLab Base Imnages tags: https://gitlab.com/gitlab-org/ci-cd/runner-tools/base-images/-/tags
+  base-images-tag: 0.0.6
+  base-images-commit: 2a7893608b84e4088995b45ec067e2e18969bb68
+  # Docker Machine tags: https://gitlab.com/gitlab-org/ci-cd/docker-machine/-/tags
+  docker-machine-tag: v0.16.2-gitlab.32
+  docker-machine-commit: 9179b634a380c5d82ed0ebf170609f26df6701f3
 
 var-transforms:
   - from: ${{package.version}}
