--- a/libffi.yaml
+++ b/libffi.yaml
@@ -1,7 +1,7 @@
 package:
   name: libffi
   version: "3.4.7"
-  epoch: 1
+  epoch: 2
   description: "portable foreign function interface library"
   copyright:
     - license: MIT
@@ -34,10 +34,6 @@ pipeline:
 
   - uses: autoconf/make-install
 
-  - runs: |
-      # Lifted from Debian - provide an -fPIC option for linking
-      cp -p .libs/libffi_convenience.a ${{targets.destdir}}/usr/lib64/libffi_pic.a
-
   - uses: strip
 
 subpackages:
@@ -45,6 +41,8 @@ subpackages:
     description: "libffi headers"
     pipeline:
       - uses: split/dev
+      - runs: |
+          cp -a "${{targets.contextdir}}" save-for-pic-dev
     dependencies:
       runtime:
         - libffi
@@ -63,6 +61,15 @@ subpackages:
             gcc -Wno-incompatible-pointer-types -o test_closure test_closure.c -lffi
             ./test_closure | grep -q Hello\ World || exit 1
         - uses: test/pkgconf
+
+  - name: "libffi-pic-dev"
+    pipeline:
+      - runs: |
+          rm -rf "${{targets.contextdir}}"
+          cp -a save-for-pic-dev "${{targets.contextdir}}"
+          # Lifted from Debian - provide an -fPIC option for linking
+          cp -p .libs/libffi_convenience.a \
+            ${{targets.contextdir}}/usr/lib64/libffi.a
 
   - name: "libffi-doc"
     description: "libffi docs"
