Refactor hydra; use go/build
Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/hydra.yaml
+++ b/hydra.yaml
@@ -6,16 +6,6 @@ package:
   copyright:
     - license: Apache-2.0
 
-environment:
-  contents:
-    packages:
-      - build-base
-      - busybox
-      - ca-certificates-bundle
-      - go
-  environment:
-    CGO_ENABLED: "1" # Needed for SQLite support
-
 pipeline:
   - uses: git-checkout
     with:
@@ -28,11 +18,16 @@ pipeline:
       deps: |-
         github.com/go-jose/go-jose/v3@v3.0.4
 
-  - uses: go/install
+  - uses: go/build
     with:
-      package: .
-      ldflags: -X 'github.com/ory/hydra/v2/driver/config.Version=$(git describe --abbrev=0 --tags)' -X 'github.com/ory/hydra/v2/driver/config.Date=$(TZ=UTC date -u "+%Y-%m-%dT%H:%M:%SZ")' -X 'github.com/ory/hydra/v2/driver/config.Commit=$(git rev-parse HEAD)'
+      packages: .
+      output: hydra
+      ldflags: |
+        -X 'github.com/ory/hydra/v2/driver/config.Version=$(git describe --abbrev=0 --tags)'
+        -X 'github.com/ory/hydra/v2/driver/config.Date=$(TZ=UTC date -u "+%Y-%m-%dT%H:%M:%SZ")'
+        -X 'github.com/ory/hydra/v2/driver/config.Commit=$(git rev-parse HEAD)'
       tags: sqlite,json1,hsm
+
 
 update:
   enabled: true
@@ -51,7 +46,7 @@ test:
   pipeline:
     - runs: |
         set -ex
-        /usr/bin/hydra version
+        /usr/bin/hydra version | grep ${{package.version}}
         /usr/bin/hydra help
         export DSN=memory
         /usr/bin/hydra migrate sql up -e --yes
