Add ignore patterns to not pull tags for -pre and -alpha versions.
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/licenseclassifier.yaml
+++ b/licenseclassifier.yaml
@@ -28,6 +28,9 @@ pipeline:
 
 update:
   enabled: true
+  ignore-regex-patterns:
+    - '.*-pre.*'
+    - '.*-alpha.*'
   github:
     identifier: google/licenseclassifier
     strip-prefix: v
