gitaly-17.9: bump go-git version to address CVEs

--- a/gitaly-17.9.yaml
+++ b/gitaly-17.9.yaml
@@ -38,6 +38,11 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 5465ad546e9c858ddfa545e8239848c1c7c94161
 
+  - uses: go/bump
+    with:
+      deps: |-
+        github.com/go-git/go-git/v5@v5.13.0
+
   - runs: |
       make install DESTDIR="${{targets.destdir}}" PREFIX=/usr
 
