renovate: ignore pre-releases ("-next") in update block

--- a/renovate.yaml
+++ b/renovate.yaml
@@ -83,6 +83,8 @@ test:
 
 update:
   enabled: true
+  ignore-regex-patterns:
+    - -next
   github:
     identifier: renovatebot/renovate
     use-tag: true
